<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_national"
            android:icon="@drawable/ic_menu_national"
            android:title="@string/menu_national" />
        <item
            android:id="@+id/nav_agriculture"
            android:icon="@drawable/ic_menu_agriculture"
            android:title="@string/menu_agriculture" />
        <item
            android:id="@+id/nav_tourism"
            android:icon="@drawable/ic_menu_tourism"
            android:title="@string/menu_tourism" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_menu_finance"
            android:title="@string/menu_finance" />

        <item
            android:id="@+id/nav_international"
            android:icon="@drawable/ic_menu_international"
            android:title="@string/menu_international" />
    </group>



</menu>
