<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_agriculture"
        android:name="com.example.newsapp.ui.agriculture.AgricultureFragment"
        android:label="@string/menu_agriculture"
        tools:layout="@layout/fragment_agriculture" />

    <fragment
        android:id="@+id/nav_tourism"
        android:name="com.example.newsapp.ui.tourism.TourismFragment"
        android:label="@string/menu_tourism"
        tools:layout="@layout/fragment_tourism" />

    <fragment
        android:id="@+id/nav_finance"
        android:name="com.example.newsapp.ui.finance.FinanceFragment"
        android:label="@string/menu_finance"
        tools:layout="@layout/fragment_finance" />

    <fragment
        android:id="@+id/nav_international"
        android:name="com.example.newsapp.ui.international.InternationalFragment"
        android:label="@string/menu_international"
        tools:layout="@layout/fragment_international" />

    <fragment
        android:id="@+id/nav_national"
        android:name="com.example.newsapp.ui.national.NationalFragment"
        android:label="@string/menu_national"
        tools:layout="@layout/fragment_national" />
</navigation>